syntax = "proto3";

option csharp_namespace = "Spm.Web.Api";

service SpmApi {
  rpc PullPackage (PullPackageRequest) returns (PullPackageResponse);
  rpc PushPackage(PushPackageRequest) returns (PushPackageResponse);
  rpc DeletePackage(DeletePackageRequest) returns (DeletePackageResponse);
  rpc GetPackages(GetPackagesRequest) returns (GetPackageResponse);
}

message PackageId {
  string name = 1;
  int32 major = 2;
  int32 minor = 3;
  int32 build = 4;
  int32 revision = 5;
}

message PackageInfo {
  PackageId id = 1;
  string description = 2;
  int64 created = 3;
  repeated string tags = 4;
  string link = 5;
  map<string, string> extra = 6;
}

message PullPackageRequest {
  PackageId Id = 1;
}

message PullPackageResponse {
  bytes data = 1;
}

message PushPackageRequest {
  bytes data = 1;
}

message PushPackageResponse {
  bool success = 1;
  repeated string errors = 2;
}

message DeletePackageRequest {
  PackageId id = 1;
}

message DeletePackageResponse {
  oneof result {
    bool success = 1;
    string error = 2;
  }
}

message GetPackagesRequest {
  StringFilter name = 1;
  IntFilter major = 2;
  IntFilter minor = 3;
  IntFilter patch = 4;
  IntFilter build = 5;
  StringFilter hash = 6;
  repeated string labels = 7;
  map<string, StringFilter> tags = 8;
  Sorting sorting = 9;
  int32 pageNumber = 10;
  int32 pageSize = 11;
}

message GetPackageResponse {
  repeated PackageInfo packages = 1;
  int32 count = 2;
  int32 total = 3;
  int32 page = 4;
}

// compare operator for filtering
enum Operator {
  LessThanOrEqual = 0;
  LessThan = 1;
  Equals = 2;
  GreaterThanOrEqual = 3;
  GreaterThan = 4;
  Contains = 5;
  Start = 6;
  End = 7;
}

// order to sort
enum Order {
  Desc = 0;
  Asc = 1;
}

message Sorting {
  Order sorting = 1;
  string field = 2;
}

message IntFilter {
  int32 value = 1;
  Operator operator = 2;
}

message StringFilter {
  string value = 1;
  Operator operator = 2;
}
